opengist/opengist-ssh-tcproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: opengist-ssh
  namespace: opengist
spec:
  parentRefs:
    - name: opengist
      sectionName: ssh
      group: gateway.networking.k8s.io
      kind: Gateway
  rules:
    - backendRefs:
        - name: opengist
          port: 22
          group: ""
          kind: Service
          weight: 1
