opengist/opengist-www-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opengist-http
  namespace: opengist
spec:
  parentRefs:
    - name: opengist
      sectionName: http
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - gist.raft.lutris.house
  rules:
    - backendRefs:
        - name: opengist
          port: 80
          kind: Service
          group: ""
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
